# logcabin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Protocol/: ServerControl.proto  ServerStats.proto
Server/: ClientService.cc  ControlService.cc  SnapshotMetadata.proto  SnapshotStateMachine.proto
Storage/: SegmentedLog.proto  SimpleFileLog.proto
cmake/: CompileOptions.cmake  Dependencies.cmake  Functions.cmake  ProtobufDependencies.cmake
docs/: Doxyfile
