cmake_minimum_required(VERSION 3.12)
project(logcabin)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

list(APPEND CABIN_PROTO_FOLDERS "Core")
list(APPEND CABIN_PROTO_FOLDERS "Protocol")
list(APPEND CABIN_PROTO_FOLDERS "Server")
list(APPEND CABIN_PROTO_FOLDERS "Storage")
list(APPEND CABIN_PROTO_FOLDERS "Tree")

list(APPEND CABIN_PROTO_NAME_FILES "")
set(CABIN_PROTO_FILES_HDRS "")
set(CABIN_PROTO_FILES_SRCS "")
foreach(PROTO_FOLDER_PATH ${CABIN_PROTO_FOLDERS})
    file(GLOB PROTO_FILES "${PROTO_FOLDER_PATH}/*.proto")
    foreach(PROTO_FILE ${PROTO_FILES})
        get_filename_component(PROTO_FILE_NAME ${PROTO_FILE} NAME_WE)
        get_filename_component(PROTO_FILE_PATH ${PROTO_FILE} ABSOLUTE)

        list(APPEND CABIN_PROTO_NAME_FILES "${PROTO_FILE_NAME}.proto")
        set(CABIN_PROTO_FILES_HDRS ${CABIN_PROTO_FILES_HDRS} "${CMAKE_CURRENT_BINARY_DIR}/${PROTO_FILE_NAME}.pb.h")
        set(CABIN_PROTO_FILES_HDRS ${CABIN_PROTO_FILES_SRCS} "${CMAKE_CURRENT_BINARY_DIR}/${PROTO_FILE_NAME}.pb.cc")
    endforeach()
endforeach()
list(TRANSFORM CABIN_PROTO_FOLDERS PREPEND "--proto_path=${CMAKE_CURRENT_SOURCE_DIR}/")
add_custom_command(OUTPUT ${CABIN_PROTO_FILES_HDRS} ${CABIN_PROTO_FILES_SRCS}
                   COMMAND protoc ${CABIN_PROTO_FOLDERS} --cpp_out=${CMAKE_CURRENT_BINARY_DIR} ${CABIN_PROTO_NAME_FILES})
add_library(cabin-proto-lib ${CABIN_PROTO_FILES_HDRS} ${CABIN_PROTO_FILES_SRCS})